k8s/server/overlays/prod/django/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-virtual-service
spec:
  hosts:
    - hopic-sdpac.data.phac.gc.ca
  gateways:
  - istio-ingress/mesh-gateway
  http:
  - name: gateway-to-server
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: server.server.svc.cluster.local
